--- a/SignalRWebUI/Views/Shared/Components/_AdminLayoutSidebarPartialComponent/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_AdminLayoutSidebarPartialComponent/Default.cshtml
@@ -49,7 +49,7 @@
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="forms.html">
+				<a href="/Category">
 					<i class="la la-keyboard-o"></i>
 					<p>Kategoriler</p>
 				</a>
