--- a/SignalRWebUI/Views/_ViewImports.cshtml
+++ b/SignalRWebUI/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using SignalRWebUI
 @using SignalRWebUI.Models
+@using SignalRWebUI.Dtos.CategoryDto
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
