--- a/SignalRWebUI/Views/Shared/Components/_AdminLayoutSidebarPartialComponent/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_AdminLayoutSidebarPartialComponent/Default.cshtml
@@ -37,15 +37,17 @@
 		</div>
 		<ul class="nav">
 			<li class="nav-item">
-				<a href="index.html">
+				<a href="#">
 					<i class="la la-dashboard"></i>
 					<p>Dashboard</p>
+					<span class="badge badge-count">0</span>
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="components.html">
+				<a href="#">
 					<i class="la la-table"></i>
 					<p>Menüyü Gör</p>
+					<span class="badge badge-count">0</span>
 				</a>
 			</li>
 			<li class="nav-item">
@@ -55,69 +57,79 @@
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="tables.html">
+				<a href="/Product">
 					<i class="la la-th"></i>
 					<p>Ürünler</p>
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="notifications.html">
+				<a href="#">
 					<i class="la la-bell"></i>
 					<p>Rezervasyonlar</p>
+					<span class="badge badge-count">0</span>
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="typography.html">
+				<a href="#">
 					<i class="la la-font"></i>
 					<p>Hakkımızda</p>
+					<span class="badge badge-count">0</span>
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="icons.html">
+				<a href="#">
 					<i class="la la-fonticons"></i>
 					<p>Mesajlar</p>
+					<span class="badge badge-count">0</span>
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="icons.html">
+				<a href="#">
 					<i class="la la-fonticons"></i>
 					<p>İndirimler</p>
+					<span class="badge badge-count">0</span>
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="icons.html">
+				<a href="#">
 					<i class="la la-fonticons"></i>
 					<p>Öne Çıkanlar</p>
+					<span class="badge badge-count">0</span>
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="icons.html">
+				<a href="#">
 					<i class="la la-fonticons"></i>
 					<p>Referanslar</p>
+					<span class="badge badge-count">0</span>
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="icons.html">
+				<a href="#">
 					<i class="la la-fonticons"></i>
 					<p>Sosyal Medya</p>
+					<span class="badge badge-count">0</span>
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="icons.html">
+				<a href="#">
 					<i class="la la-fonticons"></i>
 					<p>İstatistikler</p>
+					<span class="badge badge-count">0</span>
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="icons.html">
+				<a href="#">
 					<i class="la la-fonticons"></i>
 					<p>Ayarlar</p>
+					<span class="badge badge-count">0</span>
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="icons.html">
+				<a href="#">
 					<i class="la la-fonticons"></i>
 					<p>Çıkış Yap</p>
+					<span class="badge badge-count">0</span>
 				</a>
 			</li>
 		</ul>
