--- a/SignalRWebUI/Views/Shared/Components/_AdminLayoutSidebarPartialComponent/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_AdminLayoutSidebarPartialComponent/Default.cshtml
@@ -70,10 +70,9 @@
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="#">
+				<a href="/About">
 					<i class="la la-font"></i>
 					<p>Hakkımızda</p>
-					<span class="badge badge-count">0</span>
 				</a>
 			</li>
 			<li class="nav-item">
