Rezervasyon API Consume

--- a/SignalRWebUI/Views/Shared/Components/_AdminLayoutSidebarPartialComponent/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_AdminLayoutSidebarPartialComponent/Default.cshtml
@@ -63,10 +63,9 @@
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="#">
+				<a href="/Booking">
 					<i class="la la-bell"></i>
 					<p>Rezervasyonlar</p>
-					<span class="badge badge-count">0</span>
 				</a>
 			</li>
 			<li class="nav-item">
