İletişim API Consume

--- a/SignalRWebUI/Views/Shared/Components/_AdminLayoutSidebarPartialComponent/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_AdminLayoutSidebarPartialComponent/Default.cshtml
@@ -89,6 +89,12 @@
 				</a>
 			</li>
 			<li class="nav-item">
+				<a href="/Contact">
+					<i class="la la-font"></i>
+					<p>İletişim</p>
+				</a>
+			</li>
+			<li class="nav-item">
 				<a href="#">
 					<i class="la la-fonticons"></i>
 					<p>Öne Çıkanlar</p>
