--- a/SignalRWebUI/Views/Shared/Components/_AdminLayoutSidebarPartialComponent/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_AdminLayoutSidebarPartialComponent/Default.cshtml
@@ -82,10 +82,9 @@
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="#">
+				<a href="/Discount">
 					<i class="la la-fonticons"></i>
 					<p>İndirimler</p>
-					<span class="badge badge-count">0</span>
 				</a>
 			</li>
 			<li class="nav-item">
