--- a/SignalRWebUI/Views/_ViewImports.cshtml
+++ b/SignalRWebUI/Views/_ViewImports.cshtml
@@ -8,4 +8,5 @@
 @using SignalRWebUI.Dtos.DiscountDto
 @using SignalRWebUI.Dtos.FeatureDto
 @using SignalRWebUI.Dtos.SocialMediaDto
+@using SignalRWebUI.Dtos.TestimonialDto
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
