--- a/SignalRWebUI/Views/SignalRDefault/Index.cshtml
+++ b/SignalRWebUI/Views/SignalRDefault/Index.cshtml
@@ -1,39 +1,40 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <h1>Index</h1>
 
 
-@section Scripts
-{
-    <script src="~/lib/microsoft/signalr/dist/browser/signalr.min.js"></script>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="~/js/site.js" asp-append-version="true"></script>
+<script src="~/lib/microsoft/signalr/dist/browser/signalr.min.js"></script>
 
-    <div class="content">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="card">
-                        <script type="text/javascript">
-                            $(document).ready(() => {
-                                var connection = new signalR.HubConnectionBuilder().withUrl("https://localhost:44330/SignalRHub").build();
+<div class="content">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <script type="text/javascript">
+                        $(document).ready(() => {
+                            var connection = new signalR.HubConnectionBuilder().withUrl("https://localhost:44330/SignalRHub").build();
 
+                            $("#connstatus").text(connection.state);
+                            
+                            connection.start().then(() => {
                                 $("#connstatus").text(connection.state);
-                                
-                                connection.start().then(() => {
-                                    $("#connstatus").text(connection.state);
-                                }).catch((err) => {
-                                    console.log(err);
-                                });
+                            }).catch((err) => {
+                                console.log(err);
                             });
-                        </script>
-                    </div>
+                        });
+                    </script>
                 </div>
             </div>
         </div>
     </div>
-}
+</div>
+
 
 <div class="row">
     <div class="col-md-8 offset-2">
