--- a/SignalRWebUI/Views/SignalRDefault/Index.cshtml
+++ b/SignalRWebUI/Views/SignalRDefault/Index.cshtml
@@ -21,12 +21,19 @@
                             var connection = new signalR.HubConnectionBuilder().withUrl("https://localhost:44330/SignalRHub").build();
 
                             $("#connstatus").text(connection.state);
-                            
+
                             connection.start().then(() => {
                                 $("#connstatus").text(connection.state);
+                                connection.invoke("SendCategoryCount");
                             }).catch((err) => {
                                 console.log(err);
                             });
+                            
+                            connection.on("ReceiveCategoryCount", (value) => {
+                                $("#categorycount").text(value);
+                            });
+
+
                         });
                     </script>
                 </div>
@@ -39,5 +46,6 @@
 <div class="row">
     <div class="col-md-8 offset-2">
         <div class="alert alert-success">Bağlantı Durumu : <strong id="connstatus"></strong></div>
+        <div class="alert alert-info">Kategori Sayısı : <strong id="categorycount"></strong></div>
     </div>
 </div>
