--- a/SignalRWebUI/Views/SignalRDefault/Index.cshtml
+++ b/SignalRWebUI/Views/SignalRDefault/Index.cshtml
@@ -24,7 +24,9 @@
 
                             connection.start().then(() => {
                                 $("#connstatus").text(connection.state);
-                                connection.invoke("SendCategoryCount");
+                                setInterval(() => {
+                                    connection.invoke("SendCategoryCount");
+                                }, 1000);
                             }).catch((err) => {
                                 console.log(err);
                             });
