--- a/SignalRWebUI/Views/Shared/Components/_DefaultLayoutHeaderComponentPartial/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_DefaultLayoutHeaderComponentPartial/Default.cshtml
@@ -6,7 +6,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <link rel="shortcut icon" href="~/feane-1.0.0/images/favicon.png" type="">
-    <title> Signal Restoran </title>
+    <title> SignalR Restoran </title>
     <link rel="stylesheet" type="text/css" href="~/feane-1.0.0/css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/css/nice-select.min.css" integrity="sha512-CruCP+TD3yXzlvvijET8wV5WxxEh5H8P4cmz0RFbKK6FlZ2sYl3AEsKlLPHbniXKSrDdFewhbmBK5skbdsASbQ==" crossorigin="anonymous" />
