--- a/SignalRWebUI/Views/Shared/Components/_DefaultLayoutNavbarComponentPartial/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_DefaultLayoutNavbarComponentPartial/Default.cshtml
@@ -5,11 +5,7 @@
     <header class="header_section">
         <div class="container">
             <nav class="navbar navbar-expand-lg custom_nav-container ">
-                <a class="navbar-brand" href="index.html">
-                    <span>
-                        Feane
-                    </span>
-                </a>
+                <a class="navbar-brand" href="index.html"><span>SignalR Restoran</span></a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class=""> </span>
@@ -18,16 +14,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav  mx-auto ">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home </a>
+                            <a class="nav-link" href="/Default">Anasayfa</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="menu.html">Menu</a>
+                            <a class="nav-link" href="/Menu">Menü</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
+                            <a class="nav-link" href="/AboutUI">Hakkkımızda</a>
                         </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="book.html">Book Table <span class="sr-only">(current)</span> </a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/BookATable">Rezervasyon</a>
                         </li>
                     </ul>
                     <div class="user_option">
@@ -46,9 +42,7 @@
                                 <i class="fa fa-search" aria-hidden="true"></i>
                             </button>
                         </form>
-                        <a href="" class="order_online">
-                            Order Online
-                        </a>
+                        <a href="/Menu" class="order_online">Sipariş</a>
                     </div>
                 </div>
             </nav>
