--- a/SignalRWebUI/Views/Shared/Components/_DefaultLayoutFooterComponentPartial/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_DefaultLayoutFooterComponentPartial/Default.cshtml
@@ -1,28 +1,30 @@
-﻿<footer class="footer_section">
+﻿@model List<ResultSocialMediaDto>
+
+<footer class="footer_section">
     <div class="container">
         <div class="row">
             <div class="col-md-4 footer-col">
                 <div class="footer_contact">
                     <h4>
-                        Contact Us
+                        Bize Ulaşın
                     </h4>
                     <div class="contact_link_box">
-                        <a href="">
+                        <a href="@ViewBag.Location" blank="_target">
                             <i class="fa fa-map-marker" aria-hidden="true"></i>
                             <span>
-                                Location
+                                Konum
                             </span>
                         </a>
                         <a href="">
                             <i class="fa fa-phone" aria-hidden="true"></i>
                             <span>
-                                Call +01 1234567890
+                                @ViewBag.Phone
                             </span>
                         </a>
                         <a href="">
                             <i class="fa fa-envelope" aria-hidden="true"></i>
                             <span>
-                                demo@gmail.com
+                                @ViewBag.Mail
                             </span>
                         </a>
                     </div>
@@ -31,49 +33,27 @@
             <div class="col-md-4 footer-col">
                 <div class="footer_detail">
                     <a href="" class="footer-logo">
-                        Feane
+                        SignalR Restoran
                     </a>
-                    <p>
-                        Necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with
-                    </p>
+                    <p>@ViewBag.FooterDescription</p>
                     <div class="footer_social">
-                        <a href="">
-                            <i class="fa fa-facebook" aria-hidden="true"></i>
-                        </a>
-                        <a href="">
-                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                        </a>
-                        <a href="">
-                            <i class="fa fa-linkedin" aria-hidden="true"></i>
-                        </a>
-                        <a href="">
-                            <i class="fa fa-instagram" aria-hidden="true"></i>
-                        </a>
-                        <a href="">
-                            <i class="fa fa-pinterest" aria-hidden="true"></i>
-                        </a>
+                        @foreach(var item in Model)
+                        {
+                            <a href="@item.Url"><i class="@item.Icon" aria-hidden="true"></i></a>
+                        }
                     </div>
                 </div>
             </div>
             <div class="col-md-4 footer-col">
-                <h4>
-                    Opening Hours
-                </h4>
+                <h4>Hizmet</h4>
+                <p>Hergün</p>
                 <p>
-                    Everyday
-                </p>
-                <p>
-                    10.00 Am -10.00 Pm
+                    10.00 - 22.00
                 </p>
             </div>
         </div>
         <div class="footer-info">
-            <p>
-                &copy; <span id="displayYear"></span> All Rights Reserved By
-                <a href="https://html.design/">Free Html Templates</a><br><br>
-                &copy; <span id="displayYear"></span> Distributed By
-                <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>
-            </p>
+            <p>&copy; <span id="displayYear"></span> Tüm Hakları Saklıdır</p>
         </div>
     </div>
 </footer>
