--- a/SignalRWebUI/Views/Menu/Index.cshtml
+++ b/SignalRWebUI/Views/Menu/Index.cshtml
@@ -38,7 +38,7 @@
                                         <p>@item.Description</p>
                                         <div class="options">
                                             <h6>@item.Price ₺</h6>
-                                            <a href="">
+                                            <a href="#" onclick="showproductid(@item.ProductID)">
                                                 <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
                                                 <g>
                                                 <g>
@@ -106,6 +106,21 @@
 
     @await Component.InvokeAsync("_DefaultLayoutFooterComponentPartial")
     @await Component.InvokeAsync("_DefaultLayoutScriptComponentPartial")
+
+    <script>
+        function showproductid(value){
+            var id = value;
+            $.ajax({
+                type: 'post',
+                data: {item:id},
+                contentType: 'json',
+                success: function(){
+                    swal("Seçilen Ürün " +id, "", "success");
+                }
+            });
+        }
+    </script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 
 </html>
