--- a/SignalRWebUI/Views/_ViewImports.cshtml
+++ b/SignalRWebUI/Views/_ViewImports.cshtml
@@ -10,4 +10,5 @@
 @using SignalRWebUI.Dtos.SocialMediaDto
 @using SignalRWebUI.Dtos.TestimonialDto
 @using SignalRWebUI.Dtos.SliderDto
+@using SignalRWebUI.Dtos.BasketDto
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
