--- a/SignalRWebUI/Views/Basket/Index.cshtml
+++ b/SignalRWebUI/Views/Basket/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ResultBasketDto>
+﻿@model List<ResultBasketWithProduct>
 @{
     Layout = null;
 }
@@ -41,7 +41,7 @@
                         @foreach(var item in Model)
                         {
                              <tr>
-                                <td class="align-middle">@item.ProductID</td>
+                                <td class="align-middle">@item.ProductName</td>
                                 <td class="align-middle">@item.Count</td>
                                 <td class="align-middle">@item.Price</td>
                                 <td class="align-middle">@item.TotalPrice</td>
