--- a/SignalRWebUI/Views/Basket/Index.cshtml
+++ b/SignalRWebUI/Views/Basket/Index.cshtml
@@ -27,7 +27,7 @@
     <div class="container-fluid">
         <div class="row px-xl-5">
             <div class="col-lg-8 table-responsive mb-5">
-                <table class="table table-light table-borderless table-hover text-center mb-0">
+                <table class="table table-light table-bordered table-hover text-center mb-0">
                     <thead class="thead-dark">
                         <tr>
                             <th>Ürün Adı</th>
@@ -65,6 +65,28 @@
                         </div>
                     </div>
                 </form>
+
+                <br />
+
+                <div class="bg-dark">
+                    <div id="container" class="p-3 text-white">
+                        <div class="d-flex justify-content-between mb-3">
+                            <h6>Ara Toplam</h6>
+                            <h6><span id="totalprice">224</span>₺</h6>
+                        </div>
+                        <div class="d-flex justify-content-between mb-5">
+                            <h6>KDV Oranı</h6>
+                            <h6 id="kdv">20₺</h6>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <h6>Toplam Tutar</h6>
+                            <h6><span id="totalpricewithkdv">244</span>₺</h6>
+                        </div>
+                    </div>
+                </div>
+
+                <button id="btnchecked" class="btn btn-block btn-warning font-weight-bold my-3 text-white">Ödemeyi Tamamla</button>
+
             </div>
         </div>
     </div>
