--- a/SignalRWebUI/Views/Basket/Index.cshtml
+++ b/SignalRWebUI/Views/Basket/Index.cshtml
@@ -54,9 +54,7 @@
                                 <td class="align-middle">@item.Price</td>
                                 <td class="align-middle">@item.TotalPrice</td>
                                 <td class="align-middle btn-delete">
-                                    <button data-basketid="@item.BasketID" id="btndeletebasketid" class="btn btn-sm btn-danger">
-                                        <i class="fa fa-times"></i>
-                                    </button>
+                                    <a href="/Basket/DeleteBasket/@item.BasketID" class="btn btn-sm btn-danger"><i class="fa fa-times"></i></a>
                                 </td>
                             </tr>                       
                         }
