--- a/SignalRWebUI/Views/BookATable/Index.cshtml
+++ b/SignalRWebUI/Views/BookATable/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model CreateBookingDto
 @{
     Layout = null;
 }
@@ -14,49 +14,38 @@
         <div class="container">
             <div class="heading_container">
                 <h2>
-                    Book A Table
+                    Rezervasyon Oluştur
                 </h2>
             </div>
             <div class="row">
                 <div class="col-md-6">
                     <div class="form_container">
-                        <form action="">
+                        <form method="post">
                             <div>
-                                <input type="text" class="form-control" placeholder="Your Name" />
+                                <input type="text" class="form-control" placeholder="Adınız Soyadınız" asp-for="Name" />
                             </div>
                             <div>
-                                <input type="text" class="form-control" placeholder="Phone Number" />
+                                <input type="text" class="form-control" placeholder="Telefon" asp-for="Phone" />
                             </div>
                             <div>
-                                <input type="email" class="form-control" placeholder="Your Email" />
+                                <input type="email" class="form-control" placeholder="E-Posta" asp-for="Mail" />
                             </div>
                             <div>
-                                <select class="form-control nice-select wide">
+                                <select class="form-control nice-select wide" asp-for="PersonCount">
                                     <option value="" disabled selected>
-                                        How many persons?
+                                        Kaç Kişisiniz?
                                     </option>
-                                    <option value="">
-                                        2
-                                    </option>
-                                    <option value="">
-                                        3
-                                    </option>
-                                    <option value="">
-                                        4
-                                    </option>
-                                    <option value="">
-                                        5
-                                    </option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">+5</option>
                                 </select>
                             </div>
                             <div>
-                                <input type="date" class="form-control">
+                                <input type="date" class="form-control" asp-for="Date">
                             </div>
-                            <div class="btn_box">
-                                <button>
-                                    Book Now
-                                </button>
-                            </div>
+                            <div class="btn_box"><button>Yerinizi Ayırtın</button></div>
                         </form>
                     </div>
                 </div>
