--- a/SignalRWebUI/Views/Booking/Index.cshtml
+++ b/SignalRWebUI/Views/Booking/Index.cshtml
@@ -4,6 +4,33 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="~/js/site.js" asp-append-version="true"></script>
+<script src="~/lib/microsoft/signalr/dist/browser/signalr.min.js"></script>
+
+<script type="text/javascript">
+	$(document).ready(() => {
+		var connection = new signalR.HubConnectionBuilder().withUrl("https://localhost:44330/SignalRHub").build();
+
+		connection.start().then(() => {
+
+			setInterval(() => {
+				connection.invoke("SendBookingList");
+			}, 5000);
+
+		}).catch((err) => {
+			console.log(err);
+		});
+
+		connection.on("ReceiveBookingList", (value) => {
+			//$("#categorycount").text(value1);
+			console.log(value);
+		});
+
+	});
+</script>
+
 <div class="content">
 	<div class="container-fluid">
 		<h4 class="page-title">Rezervasyon İşlemleri</h4>
