--- a/SignalRWebUI/Views/Booking/Index.cshtml
+++ b/SignalRWebUI/Views/Booking/Index.cshtml
@@ -17,15 +17,38 @@
 
 			setInterval(() => {
 				connection.invoke("SendBookingList");
-			}, 5000);
+			}, 1000);
 
 		}).catch((err) => {
 			console.log(err);
 		});
 
 		connection.on("ReceiveBookingList", (value) => {
-			//$("#categorycount").text(value1);
-			console.log(value);
+			let tablehtml = `<table class="table mt-3"><thead><tr>
+				<th scope="col">Ad Soyad</th>
+				<th scope="col">Telefon</th>
+				<th scope="col">Kişi Sayısı</th>
+				<th scope="col">Rezervasyon Durumu</th>
+				<th scope="col">Sil</th>
+				<th scope="col">Güncelle</th>
+				</tr>
+				</thead>
+				<tbody>`
+
+			$.each(value, (index, item) => {
+				tablehtml += `<tr>
+					<td>${item.name}</td>
+					<td>${item.phone}</td>
+					<td>${item.personCount}</td>
+					<td>${"Rezervasyon Alındı"}</td>
+					<td><a href="/Booking/DeleteBooking/${item.bookingID}" class="btn btn-outline-danger">Sil</a></td>
+					<td><a href="/Booking/UpdateBooking/${item.bookingID}" class="btn btn-outline-success">Düzenle</a></td>
+					</tr>`
+			});
+
+			tablehtml += `</tbody></table>`;
+
+			$("#bookingList").html(tablehtml);
 		});
 
 	});
@@ -41,32 +64,13 @@
 						<div class="card-title">Rezervasyon Listesi</div>
 					</div>
 					<div class="card-body">
-						<table class="table mt-3">
-							<thead>
-								<tr>
-									<th scope="col">Ad Soyad</th>
-									<th scope="col">Telefon</th>
-									<th scope="col">Kişi Sayısı</th>
-									<th scope="col">Rezervasyon Durumu</th>
-									<th scope="col">Sil</th>
-									<th scope="col">Güncelle</th>
-								</tr>
-							</thead>
-							<tbody>
-								@foreach (var item in Model)
-								{
-									<tr>
-										<td>@item.Name</td>
-										<td>@item.Phone</td>
-										<td>@item.PersonCount</td>
-										<td>Rezervasyon Alındı</td>
-										<td><a href="/Booking/DeleteBooking/@item.BookingID" class="btn btn-outline-danger">Sil</a></td>
-										<td><a href="/Booking/UpdateBooking/@item.BookingID" class="btn btn-outline-success">Düzenle</a></td>
-									</tr>
-								}
-							</tbody>
-						</table>
+									
+						<div id="bookingList"></div>
+
 						<a href="/Booking/CreateBooking" class="btn btn-outline-primary">Yeni Ekle</a>
+						<div class="col-md-8">
+							<ul class="list-group" id="bookingList"></ul>
+						</div>
 					</div>
 				</div>
 			</div>
