--- a/SignalRWebUI/Views/Shared/Components/_AdminLayoutNavbarComponentPartial/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_AdminLayoutNavbarComponentPartial/Default.cshtml
@@ -1,4 +1,33 @@
-﻿<div class="main-header">
+﻿
+
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="~/js/site.js" asp-append-version="true"></script>
+<script src="~/lib/microsoft/signalr/dist/browser/signalr.min.js"></script>
+
+<script type="text/javascript">
+	$(document).ready(() => {
+		var connection = new signalR.HubConnectionBuilder().withUrl("https://localhost:44330/SignalRHub").build();
+
+		connection.start().then(() => {
+
+			setInterval(() => {
+				connection.invoke("SendNotification");
+			}, 1000);
+
+		}).catch((err) => {
+			console.log(err);
+		});
+
+		connection.on("ReceiveNotificationCountByStatusFalse", (value1) => {
+			$("#notificationcount").text(value1);
+		});
+
+	});
+</script>
+
+
+<div class="main-header">
 	<div class="logo-header">
 		<a href="index.html" class="logo">SignalR Admin</a>
 		<button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="collapse" aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,7 +63,7 @@
 				<li class="nav-item dropdown hidden-caret">
 					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						<i class="la la-bell"></i>
-						<span class="notification">3</span>
+						<span class="notification" id="notificationcount"></span>
 					</a>
 					<ul class="dropdown-menu notif-box" aria-labelledby="navbarDropdown">
 						<li>
