--- a/SignalRWebUI/Views/Shared/Components/_AdminLayoutNavbarComponentPartial/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_AdminLayoutNavbarComponentPartial/Default.cshtml
@@ -23,6 +23,26 @@
 			$("#notificationcount").text(value1);
 		});
 
+		connection.on("ReceiveGetAllNotificationByFalse", (value2) => {
+
+			$('#notificationList').empty();
+			for (var i = 0; i < value2.length; i++) {
+				$('#notificationList').append(`
+							<a href="#">
+								<div class="${value2[i].type}"> <i class="${value2[i].icon}"></i> </div>
+								<div class="notif-content">
+									<span class="block">${value2[i].description}</span>
+									<span class="time">${value2[i].date}</span>
+								</div>
+							</a>
+
+
+
+					`)
+			};
+
+
+		});
 	});
 </script>
 
@@ -67,48 +87,11 @@
 					</a>
 					<ul class="dropdown-menu notif-box" aria-labelledby="navbarDropdown">
 						<li>
-							<div class="dropdown-title">4 yeni bildirim var</div>
+							<div class="dropdown-title">Yeni Bildirimleriniz Var</div>
 						</li>
 						<li>
 							<div class="notif-center">
-								<a href="#">
-									<div class="notif-icon notif-primary"> <i class="la la-user-plus"></i> </div>
-									<div class="notif-content">
-										<span class="block">
-											New user registered
-										</span>
-										<span class="time">5 minutes ago</span>
-									</div>
-								</a>
-								<a href="#">
-									<div class="notif-icon notif-success"> <i class="la la-comment"></i> </div>
-									<div class="notif-content">
-										<span class="block">
-											Rahmad commented on Admin
-										</span>
-										<span class="time">12 minutes ago</span>
-									</div>
-								</a>
-								<a href="#">
-									<div class="notif-img">
-										<img src="assets/img/profile2.jpg" alt="Img Profile">
-									</div>
-									<div class="notif-content">
-										<span class="block">
-											Reza send messages to you
-										</span>
-										<span class="time">12 minutes ago</span>
-									</div>
-								</a>
-								<a href="#">
-									<div class="notif-icon notif-danger"> <i class="la la-heart"></i> </div>
-									<div class="notif-content">
-										<span class="block">
-											Farrah liked Admin
-										</span>
-										<span class="time">17 minutes ago</span>
-									</div>
-								</a>
+								<div id="notificationList"></div>
 							</div>
 						</li>
 						<li>
