--- a/SignalRWebUI/Views/_ViewImports.cshtml
+++ b/SignalRWebUI/Views/_ViewImports.cshtml
@@ -11,4 +11,5 @@
 @using SignalRWebUI.Dtos.TestimonialDto
 @using SignalRWebUI.Dtos.SliderDto
 @using SignalRWebUI.Dtos.BasketDto
+@using SignalRWebUI.Dtos.NotificationDto
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
