Bildirim İşlemlerinin Tamamlanması

--- a/SignalRWebUI/Views/Notification/Index.cshtml
+++ b/SignalRWebUI/Views/Notification/Index.cshtml
@@ -22,6 +22,8 @@
 									<th scope="col">Durum</th>
 									<th scope="col">Sil</th>
 									<th scope="col">Güncelle</th>
+									<th scope="col">Okundu İşaretle</th>
+									<th scope="col">Okunmadı İşaretle</th>
 								</tr>
 							</thead>
 							<tbody>
@@ -30,9 +32,11 @@
 									<tr>
 										<td>@item.Description</td>
 										<td>@item.Date</td>
-										<td>@item.Status</td>
+										<td>@(item.Status == true ? "Okundu" : "Okunmadı")</td>
 										<td><a href="/Notification/DeleteNotification/@item.NotificationID" class="btn btn-outline-danger">Sil</a></td>
 										<td><a href="/Notification/UpdateNotification/@item.NotificationID" class="btn btn-outline-success">Düzenle</a></td>
+										<td><a href="/Notification/NotificationStatusChangeToTrue/@item.NotificationID" class="btn btn-outline-warning">Okundu Yap</a></td>
+										<td><a href="/Notification/NotificationStatusChangeToFalse/@item.NotificationID" class="btn btn-outline-secondary">Okunmadı Yap</a></td>
 									</tr>
 								}
 							</tbody>
