--- a/SignalRWebUI/Views/_ViewImports.cshtml
+++ b/SignalRWebUI/Views/_ViewImports.cshtml
@@ -12,4 +12,5 @@
 @using SignalRWebUI.Dtos.SliderDto
 @using SignalRWebUI.Dtos.BasketDto
 @using SignalRWebUI.Dtos.NotificationDto
+@using SignalRWebUI.Dtos.MenuTableDto
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
