--- a/SignalRWebUI/Views/MenuTable/TableListByStatus.cshtml
+++ b/SignalRWebUI/Views/MenuTable/TableListByStatus.cshtml
@@ -4,32 +4,61 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<div class="content">
-	<div class="container-fluid">
-		<h4 class="page-title">Anlık Masa Durumları</h4>
-		<div class="row">
-			@foreach(var item in Model)
-			{
-				<div class="col-md-3">
-					<div class="card card-stats @(item.Status == false ? "card-danger" : "card-success")">
-						<div class="card-body ">
-							<div class="row">
-								<div class="col-5">
-									<div class="icon-big text-center">
-										<i class="la la-certificate"></i>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="~/js/site.js" asp-append-version="true"></script>
+<script src="~/lib/microsoft/signalr/dist/browser/signalr.min.js"></script>
+
+<script type="text/javascript">
+	$(document).ready(() => {
+		var connection = new signalR.HubConnectionBuilder().withUrl("https://localhost:44330/SignalRHub").build();
+
+		connection.start().then(() => {
+
+			setInterval(() => {
+				connection.invoke("SendMenuTableStatus");
+			}, 1000);
+
+		}).catch((err) => {
+			console.log(err);
+		});
+
+		connection.on("ReceiveMenuTableStatus", (value) => {
+			let tablehtml = `<div class="row">`;
+			$.each(value, (index, item) => {
+				tablehtml += `
+					<div class="col-md-3">
+								<div class="card card-stats ${item.status == false ? "card-danger" : "card-success"}">
+							<div class="card-body ">
+								<div class="row">
+									<div class="col-5">
+										<div class="icon-big text-center">
+											<i class="la la-certificate"></i>
+										</div>
 									</div>
-								</div>
-								<div class="col-7 d-flex align-items-center">
-									<div class="numbers">
-										<p class="card-category">@item.Name</p>
-										<h4 class="card-title">@(item.Status == true ? "Masa Dolu" : "Masa Boş")</h4>
+									<div class="col-7 d-flex align-items-center">
+										<div class="numbers">
+											<p class="card-category">${item.name}</p>
+											<h4 class="card-title">${item.status == true ? "Masa Dolu" : "Masa Boş"}</h4>
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>
-					</div>
-				</div>
-			}
-		</div>
+					</div>`
+			});
+
+			tablehtml += `</div>`
+
+			$("#statuslist").html(tablehtml);
+		});
+
+	});
+</script>
+
+<div class="content">
+	<div class="container-fluid">
+		<h4 class="page-title">Anlık Masa Durumları</h4>
+		<div id="statuslist"></div>
 	</div>
 </div>
