chat js yazılması

--- a/SignalRWebUI/Views/Message/Index.cshtml
+++ b/SignalRWebUI/Views/Message/Index.cshtml
@@ -28,7 +28,7 @@
             <div class="row p-1">
                 <div class="col-2">Mesajınız:</div>
                 <div class="col-5">
-                    <input type="text" id="mesajinput" class="form-control"/>
+                    <input type="text" id="messageinput" class="form-control"/>
                 </div>
             </div>
 
