--- a/SignalRWebUI/Views/Message/Index.cshtml
+++ b/SignalRWebUI/Views/Message/Index.cshtml
@@ -3,12 +3,19 @@
     Layout = null;
 }
 
+
+
+
+
 <!DOCTYPE html>
 <html>
 @await Component.InvokeAsync("_DefaultLayoutHeaderComponentPartial")
 <body class="sub_page">
     @await Component.InvokeAsync("_DefaultLayoutNavbarComponentPartial")
     </div>
+
+
+
 
     <section class="food_section layout_padding">
         <div class="container">
@@ -54,16 +61,15 @@
 
 
 
-
-
-
-
-
         </div>
     </section>
 
     @await Component.InvokeAsync("_DefaultLayoutFooterComponentPartial")
     @await Component.InvokeAsync("_DefaultLayoutScriptComponentPartial")
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/5.0.8/signalr.min.js"></script>
+    <script src="~/js/chat.js"></script>
 
 </body>
 
