--- a/SignalRWebUI/Views/_ViewImports.cshtml
+++ b/SignalRWebUI/Views/_ViewImports.cshtml
@@ -13,4 +13,5 @@
 @using SignalRWebUI.Dtos.BasketDto
 @using SignalRWebUI.Dtos.NotificationDto
 @using SignalRWebUI.Dtos.MenuTableDto
+@using SignalRWebUI.Dtos.IdentityDto
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
