--- a/SignalRWebUI/Views/Booking/Index.cshtml
+++ b/SignalRWebUI/Views/Booking/Index.cshtml
@@ -31,6 +31,8 @@
 				<th scope="col">Rezervasyon Durumu</th>
 				<th scope="col">Sil</th>
 				<th scope="col">Güncelle</th>
+				<th scope="col">Onayla</th>
+				<th scope="col">İptal</th>
 				</tr>
 				</thead>
 				<tbody>`
@@ -40,9 +42,11 @@
 					<td>${item.name}</td>
 					<td>${item.phone}</td>
 					<td>${item.personCount}</td>
-					<td>${"Rezervasyon Alındı"}</td>
+					<td>${item.description}</td>
 					<td><a href="/Booking/DeleteBooking/${item.bookingID}" class="btn btn-outline-danger">Sil</a></td>
 					<td><a href="/Booking/UpdateBooking/${item.bookingID}" class="btn btn-outline-success">Düzenle</a></td>
+					<td><a href="/Booking/BookingStatusApproved/${item.bookingID}" class="btn btn-outline-info">Onayla</a></td>
+					<td><a href="/Booking/BookingStatusCancelled/${item.bookingID}" class="btn btn-outline-dark">İptal Et</a></td>
 					</tr>`
 			});
 
