--- a/SignalRWebUI/Views/Slider/Index.cshtml
+++ b/SignalRWebUI/Views/Slider/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ResultFeatureDto>
+﻿@model List<ResultSliderDto>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
@@ -23,7 +23,6 @@
 									<th scope="col">Açıklama 1</th>
 									<th scope="col">Açıklama 2</th>
 									<th scope="col">Açıklama 3</th>
-									<th scope="col">Sil</th>
 									<th scope="col">Güncelle</th>
 								</tr>
 							</thead>
@@ -37,13 +36,11 @@
 										<td>@item.Description1</td>
 										<td>@item.Description2</td>
 										<td>@item.Description3</td>
-										<td><a href="/Feature/DeleteFeature/@item.FeatureID" class="btn btn-outline-danger">Sil</a></td>
-										<td><a href="/Feature/UpdateFeature/@item.FeatureID" class="btn btn-outline-success">Düzenle</a></td>
+										<td><a href="/Slider/UpdateSlider/@item.SliderID" class="btn btn-outline-success">Düzenle</a></td>
 									</tr>
 								}
 							</tbody>
 						</table>
-						<a href="/Feature/CreateFeature" class="btn btn-outline-primary">Yeni Ekle</a>
 					</div>
 				</div>
 			</div>
